# ir-color-guide

./: .coveragerc  .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  LICENSE  README-ja.md  README.md  package-lock.json  package.json  palettes.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/instructions/: palettes.instructions.md  python-scripts.instructions.md  readme.instructions.md
.github/linters/: .isort.cfg  .jscpd.json  .python-lint  zizmor.yaml
.github/workflows/: pytest.yml  super-linter.yml
r_script/: ir_color_palettes.R
scripts/: __init__.py  build.py  formatter.py  linter.py  test.py  version.py
tableau/: Preferences.tps
tests/: test_build.py  test_formatter.py  test_linter.py  test_test.py  test_version.py
