[project]
name = "ir-color-guide"
version = "0.3.0"
description = "IR Data Visualization Color Guidelines"
authors = [
    {name = "ttsukagoshi", email = "ttsukagoshi@aiu.ac.jp"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyyaml>=6.0.0,<7.0.0"
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [
    {include = "scripts"}
]

[tool.poetry.scripts]
build = "scripts.build:main"
formatter = "scripts.formatter:main"
linter = "scripts.linter:main"
test = "scripts.test:main"
version_major = "scripts.version:major"
version_minor = "scripts.version:minor"
version_patch = "scripts.version:patch"

[tool.isort]
profile = "black"
src_paths = ["scripts", "tests"]
force_sort_within_sections = true

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint."MASTER"]
jobs = 0

[tool.pytest]
addopts = ["--cov", "--cov-report", "html", "--cov-report", "term", "--cov-config=.coveragerc"]
